<resources>
    <string name="app_name">Travel Gallery</string>

    <!--Names for 4 sections in the app-->
    <string name="photos_fragment_title">Photos</string>
    <string name="albums_fragment_title">Albums</string>
    <string name="stories_fragment_title">Stories</string>
    <string name="map_fragment_title">Map</string>

    <!--Name for actions in menu tab-->
    <string name="action_settings">Settings</string>
    <string name="action_settings_color_theme_key">color_theme_setting</string>
    <string name="action_settings_sort_key">sort_setting</string>
    <string name="action_settings_columns_key">column_setting</string>
    <string name="action_settings_dark_mode_key">dark_mode_setting</string>

    <!--Preference strings-->
    <string name="action_settings_color_theme_title">Theme Color</string>
    <string name="action_settings_sort_title">Sort by date or Shuffle</string>
    <string name="action_settings_sort_on">Sort by date</string>
    <string name="action_settings_sort_off">Shuffle randomly</string>
    <string name="action_settings_dark_mode_on">On</string>
    <string name="action_settings_dark_mode_off">Off</string>
    <string name="action_settings_dark_mode_title">Dark Mode</string>

    <!--Name for theme-->
    <string name="blue_theme_name">Crystal Blue</string>
    <string name="orange_theme_name">Sunshine Orange</string>
    <string name="green_theme_name">Coral Green</string>
    <string name="gray_theme_name">Silver Gray</string>
    <string name="red_theme_name">Bloody Red</string>

    <!--Name for action button-->
    <string name="action_button_info">Info</string>
    <string name="action_button_delete">Delete</string>
    <string name="action_button_favorite">Favorite</string>
    <string name="action_button_people">People</string>
    <string name="action_button_food">Food</string>

    <string name="action_settings_columns_title">Columns</string>
    <string name="action_bar_button_delete_icon">Delete Icon</string>
    <string name="action_adding_images">Add Images</string>
    <string name="actionAdding_albums">Adding album</string>
    <string name="action_rename_album">Rename</string>
    <string name="action_adding_image_to_album">Add Image</string>
    <string name="action_return_new_image_to_album">DONE</string>
    <string name="action_setting_album_cover">Set Cover</string>
    <string name="create_album_location">Location Album</string>
    <string name="create_album_others">Other Album</string>

    <!--Google Map API-->

    <string name="google_map_api_key">AIzaSyDjzkB0YfR4bCh9Lz-byUFkcIo1y1n8jXQ</string>
    <string name="action_save">Save</string>
    <string name="action_adding_story">Add Story</string>
    <string name="action_setting_delete_album">Delete Album</string>
    <string name="action_adding_new_city_country">New Item</string>
    <string name="action_setting_remove_image_from_album">Remove Image</string>
    <string name="action_delete_story">Delete Story</string>
    <string name="action_edit_page_story">Edit This Page</string>
    <string name="action_organize_story">Organize Story</string>
    <string name="action_add_new_page_to_story">Add New Page</string>
    <string name="action_edit_story">Edit Story</string>
    <string name="action_settings_dark_map_key">dark_map_setting</string>
    <string name="action_settings_dark_map_title">Dark Map</string>
</resources>
